2006-12-25  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua-install.scm
	  Add New material-type as "template",which is
	  for install XML kahua template files.
	
2006-12-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: doc/SiteBundle.ja
	  New document.

	* New: doc/AboutKahua.ja
	  New document.

	* New: doc/Concepts/Servers
	  New document.

2006-12-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: INSTALL
	  Description of "Site-Bundle".

	* Add: src/kahua/user.scm
	  New function kahua-user-add-role! and kahua-user-drop-role!,
	  and <kahua-user> has name-of(login-name), roles-of(role-alist)
	  accessor.

	* Add: src/kahua/server.scm
	  New function kahua-login and kahua-logout for convenience.
	  Usage: (kahua-login user-name password)
	         (kahua-logout)

2006-12-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/server.scm
	  New function kahua-authorized? for convenience.
	  Usage: (kahua-authorized?) or (kahua-authorized? role1 role2 ...)

2006-12-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/xml-template.scm
	  Now can handle partial XML template. Its character encoding
	  must be UTF-8 and must not have XML declaration.

	* Fix: src/kahua/xml-template.scm
	  Use sxml:attr to get id attribute, and drop id-table slot
	  in <kahua:xml-template>.

2006-12-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-httpd.scm
	  Fix that applied uri-decode-string to query string twice.

2006-12-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configure.ac
	  Change default value of KAHUA_STATICDIR(--with-staticdir) from
	  /var/www/kahua to ${localstatedir}/var/kahua/static.

2006-12-17  SHIBATA Tomohisa  <shibata@kahua.org>

	* Change: src/kahua/server.scm
	  Add support :rest keyword to define-entry-method.

2006-12-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Use sxml:string->xml-bis instead of sxml:string->xml(again).

2006-12-14  Tatsuya BIZENN  <bizenn@arthub.net>
