@@ -3,7 +3,7 @@
 ;;  Copyright (c) 2005 Kahua.Org, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: default.kahua,v 1.2 2006/07/28 13:09:39 bizenn Exp $
+;; $Id: default.kahua,v 1.3 2006/12/25 18:34:01 cut-sea Exp $
 ;;
 
 ;
@@ -11,15 +11,16 @@
 ;
 
 (define *%%_PROJECT_NAME_%%-database-name*
-  (build-path (ref (kahua-config) 'working-directory)
-	      "%%_PROJECT_NAME_%%" "db"))
+  (build-path (kahua-working-directory)
+	      "%%_PROJECT_NAME_%%"))
 (define *file-directory*
   (let1 upload-path (kahua-static-document-path "%%_PROJECT_NAME_%%/files")
     (make-directory* upload-path)
     upload-path))
+(define *file-url*
+  (kahua-static-document-url "%%_PROJECT_NAME_%%/files"))
 
 (primary-database-name *%%_PROJECT_NAME_%%-database-name*)
-(kahua-check-transaction! #f)
 
 ;
 ; site setting
