@@ -3,7 +3,7 @@
 ;;  Copyright (c) 2005 Kahua.Org, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: page.kahua,v 1.2 2006/07/28 13:09:39 bizenn Exp $
+;; $Id: page.kahua,v 1.3 2006/12/25 18:34:01 cut-sea Exp $
 ;;
 
 ;
@@ -20,7 +20,7 @@
 (define (page-base . body)
   (html/
    (head/ (title/ "%%_PROJECT_NAME_UP_%%")
-	  (meta/ (@/ (http-equiv "content-type")
+	  (meta/ (@/ (http-equiv "Content-Type")
 		     (content *content-type*)))
 	  (link/ (@/ (rel "stylesheet") (type "text/css")
 		     (href (kahua-static-document-url
