@@ -1,6 +1,6 @@
 ;; -*- coding: euc-jp; mode: scheme -*-
 ;; test %%_PROJECT_NAME_%% script.
-;; $Id: test.scm.in,v 1.2 2006/07/28 13:09:43 bizenn Exp $
+;; $Id: test.scm.in,v 1.3 2006/08/14 02:07:30 cut-sea Exp $
 
 (use gauche.test)
 (use file.util)
@@ -14,15 +14,17 @@
 (test-start "%%_PROJECT_NAME_%%")
 
 (define GOSH "##GOSH##")
+(define *PLUGINS* '(##PLUGINS##))
+(define *config* "test.conf")
 
-(sys-system "rm -rf _tmp _work")
+(sys-system "rm -rf _tmp _work %%_PROJECT_NAME_%%")
+(sys-mkdir "%%_PROJECT_NAME_%%" #o755)
 (sys-mkdir "_tmp" #o755)
 (sys-mkdir "_work" #o755)
 (sys-mkdir "_work/plugins" #o755)
 
 (copy-file "../plugins/%%_PROJECT_NAME_%%.scm"  "_work/plugins/%%_PROJECT_NAME_%%.scm")
 
-(define *config* "../%%_PROJECT_NAME_%%.conf")
 (kahua-init *config*)
 
 ;;------------------------------------------------------------
